# ChangeLog for dev-python/texttable
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Keyworded amd64.

  14 Feb 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
  Keyworded ~x86.

*texttable-0.7.0 (30 Jan 2010)

  30 Jan 2010; James Rowe <jnrowe@gmail.com> +texttable-0.7.0.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
