@@ -2,13 +2,13 @@
 Hash: SHA1
 
 DIST texttable-0.7.0.tar.gz 5163 RMD160 ebbae5e351285e9ad88f79398c2390acddf2b657 SHA1 bd9756fc1213a907c5dd2521a88bc49751459bdb SHA256 666d767eef6a8e2623cc18ed396313f6f9d72bd04b7c4bf0916ac88013ea2b2f
-EBUILD texttable-0.7.0.ebuild 304 RMD160 ec632fc76025e020c05b0111d906340148fe7dc1 SHA1 d18b5bfa9071e1ec871ecc983fc0810d24f4a3e6 SHA256 9cb68925a87c229e4cb5180d356043cdec400bb1057da15e6d468358ac447a56
-MISC ChangeLog 443 RMD160 4bbbbc773455b23e1d48ba782c1dc0aa2d899bfa SHA1 8aae2561ca607f058004f086ac854a3cdd7c3924 SHA256 726e272ef23eb190fa4bc6b3e445a2424f23d53b152a3d4f95724a4c0cb78d1b
+EBUILD texttable-0.7.0.ebuild 421 RMD160 67c2c007a0894095335e5d252e7425139add295d SHA1 0082c471ebb0b856bc30ed88cebbb05e3348c7c3 SHA256 32f2786ecbc8a054509832955c9773b7683739dd8129bb0187a63bf6ac14c532
+MISC ChangeLog 556 RMD160 23cddfff955cdc5dabfdbda93a976f54633fb332 SHA1 baddeb0ad5d69f7377d12da26b8b501b87c9d99e SHA256 423554fa93110551d173e5cef4a0fa38f146c0a6dd6f8008a82780cf3e66b8ab
 MISC metadata.xml 448 RMD160 b1ab9e1fbc6d5f09bddacf078a93a24191e2dab0 SHA1 1aa838a6becbfa989b75a164721ec95e6cb4a4a2 SHA256 888cdf3e7f24e996c1f8938ab5be074e02d8485590888200d763210b5c219342
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuLgPoACgkQzJrj3cAXR0k8WACglzF4qhXjb0iz9UMTNdqYhThK
-AfEAn0ruGDpK52OgClNIBsPLEcyuDRvN
-=cpAr
+iEYEARECAAYFAkuQDhYACgkQzJrj3cAXR0n5MACfXvkOYlKfNlpP1ZCA7VjUGCB9
+pWUAmwSKYJNIIEbm7IUwsmA24bP7qa+T
+=rMkg
 -----END PGP SIGNATURE-----
