@@ -2,9 +2,13 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit jnrowe-pypi
+EAPI="2"
+
+inherit distutils
 
 DESCRIPTION="module to generate a formatted text table, using ASCII characters."
+HOMEPAGE="http://jefke.free.fr/coding/python/"
+SRC_URI="http://jefke.free.fr/stuff/python/${PN}/${P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
