@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
+  Updated homepage and download locations.
+
   01 Mar 2010; James Rowe <jnrowe@gmail.com> texttable-0.7.0.ebuild:
   Keyworded amd64.
 
